--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.10.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
