--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4"
   },
