--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-data-grid": "^6.19.2",
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.5",
+    "i18next": "^23.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.21.3",
-    "recharts": "^2.10.4"
+    "recharts": "^2.10.4",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
