--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.8",
     "@mui/x-data-grid": "^6.19.2",
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.5",
