--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server" : "npx json-server ./server/db.json"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.8",
@@ -15,6 +16,7 @@
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.5",
     "i18next": "^23.8.1",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
