--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server" : "npx json-server ./server/db.json"
+    "server": "npx json-server ./server/db.json"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.8",
@@ -22,6 +22,7 @@
     "react-i18next": "^14.0.1",
     "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4",
     "recharts": "^2.10.4",
     "styled-components": "^6.1.8"
   },
