--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
     "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.21.3",
