--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@floating-ui/react": "^0.26.8",
     "@hookform/devtools": "^4.3.1",
     "@mui/x-data-grid": "^6.19.2",
+    "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.5",
     "i18next": "^23.8.1",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.1",
     "react-multi-date-picker": "^4.4.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
     "recharts": "^2.10.4",
