--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^10.0.4",
     "recharts": "^2.10.4",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.6",
     "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
